--- a/.htaccess
+++ b/.htaccess
@@ -23,6 +23,10 @@ Header set X-XSS-Protection "1; mode=block"
 Header set Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';"
 </IfModule>
 
+<IfModule mod_headers.c>
+  Header set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
+
 
 # Active le moteur de réécriture
 RewriteEngine On
