--- a/.htaccess
+++ b/.htaccess
@@ -27,6 +27,8 @@ Header set Content-Security-Policy "default-src 'self'; script-src 'self'; objec
   Header set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
 
+# HSTS
+Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
 
 # Active le moteur de réécriture
 RewriteEngine On
