--- a/.htaccess
+++ b/.htaccess
@@ -20,15 +20,16 @@ Header set X-XSS-Protection "1; mode=block"
 
 # Politique CSP sécurisée
 <IfModule mod_headers.c>
-Header set Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';"
+Header set Content-Security-Policy "default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://unpkg.com; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; img-src 'self' data:;"
 </IfModule>
 
 <IfModule mod_headers.c>
   Header set Referrer-Policy "strict-origin-when-cross-origin"
+  # HSTS
+  Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
 </IfModule>
 
-# HSTS
-Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
+
 
 # Active le moteur de réécriture
 RewriteEngine On
