--- a/.htaccess
+++ b/.htaccess
@@ -20,12 +20,21 @@ Header set X-XSS-Protection "1; mode=block"
 
 # Politique CSP sécurisée
 <IfModule mod_headers.c>
-Header set Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';"
+  Header set Content-Security-Policy "
+    default-src 'self';
+    script-src 'self' https://cdn.jsdelivr.net https://unpkg.com;
+    connect-src 'self' https://api.websitecarbon.com https://bff.ecoindex.fr;
+    img-src 'self' data:;
+    style-src 'self' 'unsafe-inline';
+    object-src 'none';
+    base-uri 'self';
+    frame-ancestors 'none';
+  "
+  Header set Referrer-Policy "strict-origin-when-cross-origin"
+  # HSTS
+  Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
 </IfModule>
 
-<IfModule mod_headers.c>
-  Header set Referrer-Policy "strict-origin-when-cross-origin"
-</IfModule>
 
 
 # Active le moteur de réécriture
