--- a/.htaccess
+++ b/.htaccess
@@ -31,7 +31,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ index.php [QSA,L]
 
 # Cache statique (CSS, JS, images)
-<FilesMatch "\.(html|css|js|png|jpg|jpeg|gif|svg)$">
+<FilesMatch "\.(html|css|js|png|jpg|jpeg|gif|svg|webp)$">
     Header set Cache-Control "max-age=2629800, public"
 </FilesMatch>
 
